module(
    name = "hovel",
    version = "0.3.2",
)

bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.22")
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python", version = "2.2.0")
bazel_dep(name = "rules_rust", version = "0.71.3")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.26.5",
)
go_sdk.nogo(
    includes = ["@//:__subpackages__"],
    nogo = "//:nilness_nogo",
)
use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_akamensky_argparse",
    "com_github_c_bata_go_prompt",
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_glamour",
    "com_github_charmbracelet_huh",
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_x_term",
    "com_github_modelcontextprotocol_go_sdk",
    "com_github_pkg_term",
    "in_gopkg_yaml_v3",
    "org_golang_x_crypto",
    "org_golang_x_sys",
    "org_golang_x_tools",
    "org_modernc_sqlite",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")

lint_pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
lint_pip.parse(
    hub_name = "lint_pypi",
    python_version = "3.12",
    requirements_lock = "//tools/lint:requirements_lock.txt",
)
use_repo(lint_pip, "lint_pypi")

external_tools = use_extension("//tools/bzlmod:external_tools.bzl", "external_tools")
external_tools.group(name = "core")
use_repo(
    external_tools,
    "golangci_lint_linux_amd64",
    "llvm_mingw_ucrt_linux_x86_64",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.repository_set(
    name = "rust_linux_x86_64_musl_targets",
    allocator_library = "@rules_rust//rust/private/cc:empty",
    edition = "2021",
    exec_triple = "x86_64-unknown-linux-gnu",
    target_compatible_with = [
        "//platforms:musl",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-musl",
    versions = ["1.96.1"],
)
rust.toolchain(
    allocator_library = "@rules_rust//rust/private/cc:empty",
    edition = "2021",
    extra_rustc_flags_triples = {
        "aarch64-apple-darwin": [
            "-Clink-arg=-undefined",
            "-Clink-arg=dynamic_lookup",
        ],
    },
    extra_target_triples = [
        "aarch64-apple-darwin",
        "aarch64-pc-windows-gnullvm",
        "x86_64-pc-windows-gnullvm",
        "x86_64-unknown-linux-gnu",
    ],
    versions = ["1.96.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")
