load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":demo_defs.bzl", "STANDARD_DEMOS", "vhs_demo_targets")

package(default_visibility = ["//visibility:public"])

vhs_demo_targets()

filegroup(
    name = "standard_gifs",
    srcs = [":" + name + "_gif" for name, _ in STANDARD_DEMOS],
    tags = ["manual"],
)

filegroup(
    name = "squatter_wine_gif",
    srcs = [":mcp-agent-02-squatter-wine_gif"],
    tags = ["manual"],
)

filegroup(
    name = "all_gifs",
    srcs = [
        ":squatter_wine_gif",
        ":standard_gifs",
    ],
    tags = ["manual"],
)

sh_test(
    name = "standard_verification_test",
    size = "medium",
    srcs = ["//tools/demo:verify_standard_demos.sh"],
    args = [
        "$(rootpath //cmd/hovel:hovel)",
        "$(rootpath //tools/demo/mcpagent:mcpagent)",
        "$(rootpath //examples/go/mock_survey:mock_survey)",
        "$(rootpath //examples/go/mock_exploit_session:mock_exploit_session)",
        "$(rootpath :chains/mock-survey-exploit.chain.yaml)",
    ],
    data = [
        ":chains/mock-survey-exploit.chain.yaml",
        "//cmd/hovel",
        "//examples/go/mock_exploit_session",
        "//examples/go/mock_survey",
        "//tools/demo/mcpagent",
    ],
    tags = ["e2e"],
)
