load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "site",
    srcs = glob(["**/*.html"]),
)

sh_test(
    name = "site_smoke_test",
    srcs = ["//tools/tests:site_smoke_test.sh"],
    args = [
        "$(rootpath :index.html)",
        "$(rootpath :introduction.html)",
        "$(rootpath :reference/descriptors.html)",
    ],
    data = [
        "index.html",
        "introduction.html",
        "reference/descriptors.html",
    ],
)
