load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "site",
    srcs = glob(["**/*.html"]),
)

sh_test(
    name = "site_smoke_test",
    size = "small",
    srcs = ["//tools/tests:site_smoke_test.sh"],
    args = [
        "$(rootpath :index.html)",
        "$(rootpath :introduction.html)",
        "$(rootpath :module-development.html)",
        "$(rootpath :module-protocol.html)",
        "$(rootpath :reference/descriptors.html)",
    ],
    data = [
        "index.html",
        "introduction.html",
        "module-development.html",
        "module-protocol.html",
        "reference/descriptors.html",
    ],
)
