load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hovel_lib",
    srcs = ["main.go"],
    importpath = "github.com/Vibe-Pwners/hovel/cmd/hovel",
    visibility = ["//visibility:private"],
    deps = ["//internal/adapters/rootcli"],
)

go_binary(
    name = "hovel",
    data = [
        "//examples/python:sources",
        "//sdk/python:sources",
    ],
    embed = [":hovel_lib"],
    visibility = ["//visibility:public"],
)
