load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

go_library(
    name = "hovel_lib",
    srcs = ["main.go"],
    importpath = "github.com/Vibe-Pwners/hovel/cmd/hovel",
    visibility = ["//visibility:private"],
    deps = ["//internal/adapters/rootcli"],
)

go_binary(
    name = "hovel",
    data = [
        "//examples/python:sources",
        "//sdk/python:sources",
    ],
    embed = [":hovel_lib"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "binary_e2e_test",
    size = "small",
    srcs = ["binary_e2e_test.sh"],
    args = ["$(location :hovel)"],
    data = [
        ":hovel",
        "//examples/python:sources",
        "//sdk/python:sources",
    ],
    tags = ["e2e"],
)
