load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sources",
    srcs = glob([
        "hovel-modules.json",
        "mock_exploit/**/*.py",
        "mock_exploit/pyproject.toml",
        "mock_survey/**/*.py",
        "mock_survey/pyproject.toml",
    ]),
)

py_library(
    name = "mock_survey_lib",
    srcs = glob(["mock_survey/hovel_example_survey/*.py"]),
    imports = ["mock_survey"],
    deps = ["//sdk/python:hovel_sdk"],
)

py_binary(
    name = "mock_survey_module",
    srcs = ["mock_survey/hovel_example_survey/__main__.py"],
    imports = ["mock_survey"],
    main = "mock_survey/hovel_example_survey/__main__.py",
    python_version = "PY3",
    deps = [
        ":mock_survey_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_test(
    name = "mock_survey_test",
    srcs = ["mock_survey/hovel_example_survey/module_test.py"],
    imports = ["mock_survey"],
    main = "mock_survey/hovel_example_survey/module_test.py",
    python_version = "PY3",
    deps = [
        ":mock_survey_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_library(
    name = "mock_exploit_lib",
    srcs = glob(["mock_exploit/hovel_example_exploit/*.py"]),
    imports = ["mock_exploit"],
    deps = ["//sdk/python:hovel_sdk"],
)

py_binary(
    name = "mock_exploit_module",
    srcs = ["mock_exploit/hovel_example_exploit/__main__.py"],
    imports = ["mock_exploit"],
    main = "mock_exploit/hovel_example_exploit/__main__.py",
    python_version = "PY3",
    deps = [
        ":mock_exploit_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_test(
    name = "mock_exploit_test",
    srcs = ["mock_exploit/hovel_example_exploit/module_test.py"],
    imports = ["mock_exploit"],
    main = "mock_exploit/hovel_example_exploit/module_test.py",
    python_version = "PY3",
    deps = [
        ":mock_exploit_lib",
        "//sdk/python:hovel_sdk",
    ],
)
