load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sources",
    srcs = glob([
        "hovel-modules.json",
        "etro_exploit/**/*.py",
        "etro_exploit/pyproject.toml",
        "etro_survey/**/*.py",
        "etro_survey/pyproject.toml",
        "mock_exploit/**/*.py",
        "mock_exploit/pyproject.toml",
        "mock_exploit_session/**/*.py",
        "mock_exploit_session/pyproject.toml",
        "mock_survey/**/*.py",
        "mock_survey/pyproject.toml",
    ]),
)

py_library(
    name = "etro_survey_lib",
    srcs = glob(["etro_survey/hovel_etro_survey/*.py"]),
    imports = ["etro_survey"],
    deps = ["//sdk/python:hovel_sdk"],
)

py_binary(
    name = "etro_survey_module",
    srcs = ["etro_survey/hovel_etro_survey/__main__.py"],
    imports = ["etro_survey"],
    main = "etro_survey/hovel_etro_survey/__main__.py",
    python_version = "PY3",
    deps = [
        ":etro_survey_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_test(
    name = "etro_survey_test",
    size = "small",
    srcs = ["etro_survey/hovel_etro_survey/module_test.py"],
    imports = ["etro_survey"],
    main = "etro_survey/hovel_etro_survey/module_test.py",
    python_version = "PY3",
    deps = [
        ":etro_survey_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_library(
    name = "etro_exploit_lib",
    srcs = glob(["etro_exploit/hovel_etro_exploit/*.py"]),
    imports = ["etro_exploit"],
    deps = ["//sdk/python:hovel_sdk"],
)

py_binary(
    name = "etro_exploit_module",
    srcs = ["etro_exploit/hovel_etro_exploit/__main__.py"],
    imports = ["etro_exploit"],
    main = "etro_exploit/hovel_etro_exploit/__main__.py",
    python_version = "PY3",
    deps = [
        ":etro_exploit_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_test(
    name = "etro_exploit_test",
    size = "small",
    srcs = ["etro_exploit/hovel_etro_exploit/module_test.py"],
    imports = ["etro_exploit"],
    main = "etro_exploit/hovel_etro_exploit/module_test.py",
    python_version = "PY3",
    deps = [
        ":etro_exploit_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_library(
    name = "mock_survey_lib",
    srcs = glob(["mock_survey/hovel_example_survey/*.py"]),
    imports = ["mock_survey"],
    deps = ["//sdk/python:hovel_sdk"],
)

py_binary(
    name = "mock_survey_module",
    srcs = ["mock_survey/hovel_example_survey/__main__.py"],
    imports = ["mock_survey"],
    main = "mock_survey/hovel_example_survey/__main__.py",
    python_version = "PY3",
    deps = [
        ":mock_survey_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_test(
    name = "mock_survey_test",
    size = "small",
    srcs = ["mock_survey/hovel_example_survey/module_test.py"],
    imports = ["mock_survey"],
    main = "mock_survey/hovel_example_survey/module_test.py",
    python_version = "PY3",
    deps = [
        ":mock_survey_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_library(
    name = "mock_exploit_lib",
    srcs = glob(["mock_exploit/hovel_example_exploit/*.py"]),
    imports = ["mock_exploit"],
    deps = ["//sdk/python:hovel_sdk"],
)

py_binary(
    name = "mock_exploit_module",
    srcs = ["mock_exploit/hovel_example_exploit/__main__.py"],
    imports = ["mock_exploit"],
    main = "mock_exploit/hovel_example_exploit/__main__.py",
    python_version = "PY3",
    deps = [
        ":mock_exploit_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_test(
    name = "mock_exploit_test",
    size = "small",
    srcs = ["mock_exploit/hovel_example_exploit/module_test.py"],
    imports = ["mock_exploit"],
    main = "mock_exploit/hovel_example_exploit/module_test.py",
    python_version = "PY3",
    deps = [
        ":mock_exploit_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_library(
    name = "mock_exploit_session_lib",
    srcs = glob(["mock_exploit_session/hovel_example_exploit_session/*.py"]),
    imports = ["mock_exploit_session"],
    deps = ["//sdk/python:hovel_sdk"],
)

py_binary(
    name = "mock_exploit_session_module",
    srcs = ["mock_exploit_session/hovel_example_exploit_session/__main__.py"],
    imports = ["mock_exploit_session"],
    main = "mock_exploit_session/hovel_example_exploit_session/__main__.py",
    python_version = "PY3",
    deps = [
        ":mock_exploit_session_lib",
        "//sdk/python:hovel_sdk",
    ],
)

py_test(
    name = "mock_exploit_session_test",
    size = "small",
    srcs = ["mock_exploit_session/hovel_example_exploit_session/module_test.py"],
    imports = ["mock_exploit_session"],
    main = "mock_exploit_session/hovel_example_exploit_session/module_test.py",
    python_version = "PY3",
    deps = [
        ":mock_exploit_session_lib",
        "//sdk/python:hovel_sdk",
    ],
)
