# picblobs — position-independent code blob library
#
# Build all blobs:     bazel build //modules/picblobs/src/payload:all
# Lint C code:         bazel build --config=picblobs_lint //modules/picblobs/src/... //modules/picblobs/tests/...
# Check formatting:    bazel test //modules/picblobs/tools:format_check
# Check codegen:       bazel test //modules/picblobs/tools:generate_check
# Run all checks:      bazel test //modules/picblobs/tools:all --config=picblobs_lint

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    ".clang-tidy",
    ".clang-format",
    "hovel-module.yaml",
])

filegroup(
    name = "root_metadata",
    srcs = [
        ".bazelrc",
        ".clang-format",
        ".clang-tidy",
        "BUILD.bazel",
        "MODULE.bazel",
        "README.md",
        "Taskfile.yml",
        "hovel-module.yaml",
        "lefthook.yml",
        "nacl_protocol.py",
        "sourceme",
    ],
)

py_library(
    name = "nacl_protocol",
    srcs = ["nacl_protocol.py"],
    imports = ["."],
)

filegroup(
    name = "version_targets",
    srcs = [
        ".github/workflows/picblobs.yml",
        ".github/workflows/picblobs-cli.yml",
        "CLAUDE.md",
        "MODULE.bazel",
        "hovel-module.yaml",
        "spec/models/MOD-007-release-tarball-format.md",
        "spec/requirements/REQ-020-picblobs-cli.md",
    ],
)

filegroup(
    name = "quality_sources",
    srcs = [
        ".clang-format",
        ".clang-tidy",
        "BUILD.bazel",
        "MODULE.bazel",
        "nacl_protocol.py",
        "//modules/picblobs/bazel:quality_sources",
        "//modules/picblobs/kernel:quality_sources",
        "//modules/picblobs/mbed:quality_sources",
        "//modules/picblobs/platforms:quality_sources",
        "//modules/picblobs/python:quality_sources",
        "//modules/picblobs/python_cli:quality_sources",
        "//modules/picblobs/release:quality_sources",
        "//modules/picblobs/src:quality_sources",
        "//modules/picblobs/tests:quality_sources",
        "//modules/picblobs/toolchains:quality_sources",
        "//modules/picblobs/tools:quality_sources",
    ],
)

test_suite(
    name = "bazel_test_suite",
    tests = [
        "//modules/picblobs/mbed:compile_mbed_os_test",
        "//modules/picblobs/mbed:materialize_blobs_test",
        "//modules/picblobs/mbed:target_compile_test",
        "//modules/picblobs/python:pytest_suite",
        "//modules/picblobs/python:sync_test",
        "//modules/picblobs/python_cli:pytest_suite",
        "//modules/picblobs/tests:nacl_suite",
        "//modules/picblobs/tests/runners/freebsd:runner_cppcheck",
        "//modules/picblobs/tests/runners/linux:runner_cppcheck",
        "//modules/picblobs/tests/runners/windows:runner_cppcheck",
        "//modules/picblobs/tools:format_check",
        "//modules/picblobs/tools:generate_check",
        "//modules/picblobs/tools:lint_check",
    ],
)

test_suite(
    name = "kernel_vm_test_suite",
    tags = ["manual"],
    tests = [
        "//modules/picblobs/kernel:alpine_suite",
        "//modules/picblobs/kernel:ubuntu_suite",
    ],
)

test_suite(
    name = "all_bazel_tests",
    tags = ["manual"],
    tests = [
        ":bazel_test_suite",
        ":kernel_vm_test_suite",
    ],
)
