"""picblobs — position-independent code blob library."""

module(
    name = "picblobs",
    version = "0.1.7",
)

# --- C/C++ rules ---
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

# --- Shell rules ---
bazel_dep(name = "rules_shell", version = "0.6.1")

# --- Python rules ---
bazel_dep(name = "rules_python", version = "1.7.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "picblobs_pip",
    python_version = "3.11",
    requirements_lock = "//python:requirements.txt",
)
use_repo(pip, "picblobs_pip")

mbed_pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
mbed_pip.parse(
    hub_name = "mbed_pip",
    python_version = "3.11",
    requirements_lock = "//mbed:requirements.txt",
)
use_repo(mbed_pip, "mbed_pip")

# --- Hermetic cross-compilation and emulator toolchains ---
picblobs_toolchains = use_extension("//toolchains:repositories.bzl", "picblobs_toolchains")
use_repo(
    picblobs_toolchains,
    "arm_none_eabi",
    "bootlin_aarch64",
    "bootlin_armv5",
    "bootlin_armv7",
    "bootlin_i686",
    "bootlin_mipsbe32",
    "bootlin_mipsel32",
    "bootlin_powerpc",
    "bootlin_ppc64le",
    "bootlin_riscv64",
    "bootlin_s390x",
    "bootlin_sparcv8",
    "bootlin_x86_64",
    "mbed_arm_none_eabi",
    "qemu_arm_static",
    "qemu_user_static",
)

register_toolchains("//toolchains:all")
